--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,21 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Zależności (najcięższe foldery)
+node_modules/
+
+# Artefakty z testów (generowane przy każdym uruchomieniu)
+cypress/screenshots/
+cypress/videos/
+cypress/downloads/
+
+# Logi i pliki systemowe
+npm-debug.log*
+.DS_Store
+
+# Środowisko i sekrety (to tu będą dane do Twojego VPN!)
+.env
+
+# Dependencies (Zależności)
+/node_modules
